--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+## 4.1 (04-10-2025)
+
+ADDED: UnfinishedBulk ThingDef (instead of using UnfinishedComponent).
+FIXED: Searchbox now also includes their DefName.
+
 ## 4.0 (02-10-2025)
 
 ADDED: Various new UI in the ModSettings.
