--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+## 4.2 (07-10-2025)
+
+FIXED: Recipes not showing in the vanilla workstation.
+FIXED: Recipe do not load anymore on [StaticConstructorOnStartup] but in LongEventHandler.ExecuteWhenFinished
+
 ## 4.1 (04-10-2025)
 
 ADDED: UnfinishedBulk ThingDef (instead of using UnfinishedComponent).
