Fixed real-time changing properties & Code refactoring
- Rimossa la classe `BulkProperties` e integrata in `BulkRecipe`.
- Ristrutturata `BulkRecipe` con nuove proprietà e metodi.
- Introdotta la classe `BulkRecipeGenerator` per centralizzare la logica.
- Modificato `Dialog_AddRecipe` per accettare parametri diretti.
- Aggiornati tooltip dinamici per `WorkAmount` e `Cost` in `MakeYourBulkSettings`.
- Migliorata la gestione dei riferimenti mancanti nei `RecipeDef`.
- Aggiornati `About.xml`, `Changelog.txt` e `README.md` per riflettere i cambiamenti.
- Risolti bug e ottimizzato il codice per maggiore leggibilità e modularità.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,10 @@
+## 4.3 (10-10-2025)
+
+FIXED: Real-Time changing in ModSettings BulkRecipe entry of work amount and cost.
+FIXED: ModSettings BulkRecipe entry work amount and cost tooltips.
+MOVED: BulkRecipe functions that create the BulkRecipe RecipeDef into BulkRecipeGenerator.
+REMOVED: BulkProperties.cs (Integrated into BulkRecipe).
+
 ## 4.2 (07-10-2025)
 
 FIXED: Recipes not showing in the vanilla workstation.
